fixed threshhold so marker sits flush at 0. also fixed marker label to show when at low range when it overflows.

--- a/app/common/styles/elements/thresholds.scss
+++ b/app/common/styles/elements/thresholds.scss
@@ -24,7 +24,7 @@ $threshColorLighten: 5%;
 .threshold-chart {
   position: relative;
   line-height: 0;
-  padding: .8em 0 2em 0;
+  padding: .8em 0 2em 3px;
   margin: 0 2.5em;
  //margin: 0 auto;
   .threshold__marker {
