--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -2563,7 +2563,7 @@ input.toggle-switch__round-flat:checked + label:after {
 .threshold-chart {
   position: relative;
   line-height: 0;
-  padding: .8em 0 2em 0;
+  padding: .8em 0 2em 3px;
   margin: 0 2.5em; }
   .threshold-chart .threshold__marker {
     position: absolute;
@@ -3615,6 +3615,7 @@ header {
     -webkit-transition: 0.5s linear max-height;
     transition: 0.5s linear max-height;
     padding: 0;
+    overflow: visible;
     transition: all .5s ease; }
     @media (min-width: 85.375em) {
       #sensor__details .sensors__metadata-row {
